feat: add responsiveness to steps 0-1.

--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -29,7 +29,11 @@
 	}
 
 	&.min-width {
-		min-width: 190px
+		min-width: 128px;
+
+		@media (min-width: $md) {
+			min-width: 190px
+		}
 	}
 
 	&.sm {
