--- a/src/scss/new-memory/step-0.scss
+++ b/src/scss/new-memory/step-0.scss
@@ -2,27 +2,40 @@
 	&-themes {
 		width: 100%;
 		max-width: 414px;
-		gap: 20px;
+		gap: 4px;
+
+		@media (min-width: $md) {
+			gap: 20px
+		}
 
 		&-desc {
 			width: 100%;
 			max-width: 445px;
 			margin-bottom: 20px;
-			line-height: $lh-base
+			line-height: $lh-base;
+
+			p {
+				font-size: 13px;
+
+				@media (min-width: $md) {
+					font-size: 16px
+				}
+			}
 		}
 	}
 
 	&-theme {
 		position: relative;
-		width: 100%;
+		width: calc(50% - 2px);
 		background-color: transparent;
 		padding: 0;
 		border: none;
-		border-radius: $radius-theme;
+		border-radius: 20px;
 		cursor: pointer;
 
-		@media (min-width: $sm) {
-			width: calc(50% - 10px)
+		@media (min-width: $md) {
+			width: calc(50% - 10px);
+			border-radius: $radius-theme
 		}
 
 		&.active::before {
@@ -32,21 +45,33 @@
 		&::before {
 			content: '';
 			position: absolute;
-			top: -8px;
-			left: -8px;
-			width: calc(100% + 16px);
-			height: calc(100% + 16px);
+			top: -2px;
+			left: -2px;
+			width: calc(100% + 2px);
+			height: calc(100% + 2px);
 			border: 1px solid $dark-yellow;
-			border-radius: $radius-theme-border;
+			border-radius: 34px;
 			opacity: 0;
 			transition: opacity ease-out $tr;
-			pointer-events: none
+			pointer-events: none;
+
+			@media (min-width: $md) {
+				top: -8px;
+				left: -8px;
+				width: calc(100% + 16px);
+				height: calc(100% + 16px);
+				border-radius: $radius-theme-border
+			}
 		}
 
 		img {
 			display: block;
 			width: 100%;
-			border-radius: $radius-theme
+			border-radius: 20px;
+
+			@media (min-width: $md) {
+				border-radius: $radius-theme
+			}
 		}
 	}
 }
