upd: step 1 change lang returns to the same step 1.

--- a/src/scss/components/forms.scss
+++ b/src/scss/components/forms.scss
@@ -7,7 +7,7 @@ fieldset {
 legend.legend {
 	display: block;
 	width: 100%;
-	color: $white;
+	color: $light-green;
 	margin-bottom: 20px;
 	text-align: center;
 
