--- a/src/scss/header/header.scss
+++ b/src/scss/header/header.scss
@@ -81,8 +81,13 @@
 	&-actions {
 		z-index: 10;
 
+		@media (min-width: $md) {
+			margin-left: auto
+		}
+
 		@media (min-width: $xl) {
-			width: 350px
+			width: 350px;
+			margin-left: 0
 		}
 	}
 
