--- a/src/scss/header/menu.scss
+++ b/src/scss/header/menu.scss
@@ -62,9 +62,23 @@
 			width: 100%;
 			height: 100%;
 			background-color: $very-dark-green;
-			padding: 150px 30px 100px;
+			padding: 100px 30px 100px;
 			overflow-y: auto;
-			transition: opacity ease-out $tr
+			transition: opacity ease-out $tr;
+
+			@media (min-width: $md) {
+				padding-top: 150px
+			}
+
+			.header-actions {
+				display: flex;
+				justify-content: center;
+				margin-bottom: 60px;
+
+				@media (min-width: $md) {
+					display: none
+				}
+			}
 		}
 
 		&-icons {
