--- a/src/scss/new-memory/step-3.scss
+++ b/src/scss/new-memory/step-3.scss
@@ -22,21 +22,7 @@
 			background-color: transparent;
 			border: none;
 			resize: none;
-			padding: 0;
-			caret-color: $bright-yellow;
-
-			&::-webkit-scrollbar {
-				width: 3px
-			}
-
-			&::-webkit-scrollbar-track {
-				-webkit-box-shadow: none
-			}
-
-			&::-webkit-scrollbar-thumb {
-				background-color: $bright-yellow;
-				outline: none
-			}
+			padding: 0
 		}
 	}
 }
