feat: add person fields to epitaph.

--- a/src/scss/new-memory/step-3.scss
+++ b/src/scss/new-memory/step-3.scss
@@ -1,6 +1,7 @@
 .new-memory {
 	.epitaph {
 		&.form-white {
+			flex-direction: column;
 			max-width: 630px;
 			padding-right: 88px;
 			margin-top: 0
