--- a/src/scss/new-memory/step-6.scss
+++ b/src/scss/new-memory/step-6.scss
@@ -83,7 +83,8 @@
 		color: $light-green;
 		text-transform: capitalize;
 		padding: 0 37px;
-		margin-bottom: 12px
+		margin-bottom: 12px;
+		text-align: center
 	}
 
 	&-dates {
