--- a/src/scss/new-memory/step-4.scss
+++ b/src/scss/new-memory/step-4.scss
@@ -18,8 +18,11 @@
 
 		.form-white {
 			max-width: 738px;
-			padding: 45px 108px 47px 0;
-			margin-top: 0
+			margin-top: 0;
+
+			@media (min-width: $md) {
+				padding: 45px 108px 47px 0
+			}
 		}
 
 		fieldset {
@@ -68,11 +71,15 @@
 .droparea {
 	position: relative;
 	width: 100%;
-	min-height: 300px;
+	min-height: 164px;
 	background-color: $white;
 	border: 0.5px solid $very-dark-green;
 	border-radius: 28px;
 	padding: 10px 10px 28px;
+
+	@media (min-width: $md) {
+		min-height: 300px
+	}
 
 	&.dragover {
 		border: 1px solid $dark-yellow;
@@ -123,9 +130,13 @@
 		z-index: 5;
 
 		&-percents {
-			font-size: 32px;
+			font-size: $fs-xl;
 			color: $very-dark-green;
-			margin-bottom: 9px
+
+			@media (min-width: $md) {
+				font-size: 32px;
+				margin-bottom: 9px
+			}
 		}
 
 		&-note {
@@ -150,16 +161,42 @@
 		gap: 20px;
 
 		&-load {
+			justify-content: center;
 			width: calc(50% - 10px);
-			height: 240px;
+			height: 124px;
 			border-radius: 28px;
 			border: 0.5px solid $very-dark-green;
-			padding: 10px 10px 28px;
+			padding: 10px;
+
+			@media (min-width: $md) {
+				justify-content: flex-end;
+				height: 240px;
+				padding: 10px 10px 28px
+			}
+
+			.label-button-text {
+				display: none;
+
+				@media (min-width: $md) {
+					display: inline-block
+				}
+			}
+
+			label {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				cursor: pointer
+			}
 
 			svg {
 				width: 48px;
 				height: 48px;
-				margin-bottom: 46px
+
+				@media (min-width: $md) {
+					margin-bottom: 46px
+				}
 			}
 		}
 	}
@@ -169,8 +206,22 @@
 		&-loaded {
 			position: relative;
 			width: calc(50% - 10px);
-			height: 240px;
+			height: 124px;
 			border-radius: 28px;
+
+			@media (min-width: $md) {
+				height: 240px
+			}
+
+			&:nth-child(2n) {
+				.popup-sure {
+					transform: translateX(-100%);
+
+					@media (min-width: $md) {
+						transform: none
+					}
+				}
+			}
 
 			img {
 				position: absolute;
@@ -193,8 +244,8 @@
 
 		&-delete {
 			position: absolute;
-			top: 20px;
-			right: 20px;
+			top: 10px;
+			right: 10px;
 			width: 34px;
 			height: 34px;
 			border-radius: 50%;
@@ -202,6 +253,11 @@
 			background-color: $white;
 			cursor: pointer;
 			transition: ease-out color $tr;
+
+			@media (min-width: $md) {
+				top: 20px;
+				right: 20px
+			}
 
 			svg {
 				width: 24px;
