--- a/src/scss/new-memory/step-6.scss
+++ b/src/scss/new-memory/step-6.scss
@@ -63,7 +63,7 @@
 				left: 0;
 				width: 100%;
 				height: 100%;
-				background: linear-gradient(2deg, $very-dark-green 0%, rgba(1, 28, 26, 0.00) 100%), transparent 50% / cover no-repeat
+				background: linear-gradient(2deg, $very-dark-green 0%, rgba(1, 28, 26, 0) 100%)
 			}
 
 			img {
