fix: Memory page video play/pause - 2.

--- a/src/scss/pages/memory.scss
+++ b/src/scss/pages/memory.scss
@@ -683,6 +683,10 @@ body.single-memory_page {
 					opacity: 0
 				}
 			}
+
+			.media-photo-overlay {
+				pointer-events: auto
+			}
 		}
 
 		&-bottom {
