--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -18,6 +18,7 @@
 	text-align: center;
 	font-family: $ff;
 	font-size: $fs-sm;
+	line-height: $lh-2;
 	color: $very-dark-green;
 	border: none;
 	border-radius: $radius-input;
@@ -117,6 +118,10 @@
 			opacity: 0.7
 		}
 
+		&:disabled {
+			color: rgba(195, 218, 226, 0.24)
+		}
+
 		svg {
 			margin-right: 9px
 		}
@@ -143,6 +148,23 @@
 		border-radius: 24px
 	}
 
+	&.profile-nav {
+		width: 100%;
+		gap: 10px;
+		justify-content: flex-start;
+		font-size: $fs-md;
+		line-height: $lh-2;
+		color: $light-green;
+		padding: 24px;
+		border: 1px solid rgba(195, 218, 226, 0.24);
+		transition: border-color ease-out $tr;
+
+		svg {
+			display: block;
+			width: 16px
+		}
+	}
+
 	&:disabled {
 		background-color: $disabled;
 		color: $disabled-text;
@@ -160,3 +182,4 @@
 		height: auto
 	}
 }
+
