--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -48,8 +48,12 @@
 	}
 
 	&.lg {
-		min-height: 48px;
-		padding: 12px 24px 13px
+		min-height: 40px;
+		padding: 12px 24px 13px;
+
+		@media (min-width: $lg) {
+			min-height: 48px
+		}
 	}
 
 	&.xl {
