--- a/src/scss/pages/profile.scss
+++ b/src/scss/pages/profile.scss
@@ -5,6 +5,11 @@
 
 .page-template-profile {
 	background-color: $a-bit-blue-white;
+	overflow-x: hidden;
+
+	.wrapper {
+		overflow: visible
+	}
 
 	.header-logo {
 		display: none;
@@ -12,6 +17,7 @@
 		padding: 0 11px 0 10px;
 		border: 1px solid $a-bit-blue-white;
 		border-radius: 10px;
+		z-index: 11;
 
 		@media (min-width: $lg) {
 			display: flex;
@@ -32,13 +38,29 @@
 }
 
 .profile {
+	height: 100%;
+
 	&-sidebar {
+		position: relative;
+		width: 112px;
 		background-color: $very-dark-green;
-		padding: 40px 24px;
 
 		@media (min-width: $lg) {
-			width: 384px;
-			padding: 40px 46px
+			width: 384px
+		}
+
+		&-inner {
+			position: sticky;
+			top: 0;
+			flex-grow: 1;
+			width: 100%;
+			max-height: 100dvh;
+			overflow-y: auto;
+			padding: 40px 24px;
+
+			@media (min-width: $lg) {
+				padding: 40px 46px
+			}
 		}
 
 		&-header {
@@ -188,15 +210,39 @@
 		}
 
 		&.none {
+			.profile-memories-title {
+				margin-bottom: 100px;
+
+				@media (min-width: $lg) {
+					margin-bottom: 223px
+				}
+			}
+
 			.profile-memories-inner {
-				padding: 93px 0
+				margin-bottom: 100px;
+
+				@media (min-width: $lg) {
+					margin-bottom: 223px
+				}
+
+				.profile-memories-title {
+					font-size: 24px;
+					margin: 34px 0 36px;
+					text-align: center;
+
+					@media (min-width: $lg) {
+						font-size: 38px
+					}
+				}
 			}
 		}
 
 		&-img {
-			width: 303px;
+			width: 100%;
+			max-width: 303px;
 
 			img {
+				display: block;
 				width: 100%
 			}
 		}
